--- a/static/style.css
+++ b/static/style.css
@@ -22,9 +22,9 @@
 html {
   --color-accent: oklch(65% 50% 0); /* Accent color */
   accent-color: var(--color-accent); /* Apply accent globally */
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color-scheme: light;
-  color-scheme: dark;
+  color-scheme: dark; */
 }
 
 .color-scheme {
